# Self_Knowledge_Evolve

./: .env  .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  demo_pipeline.py  requirements.txt  run_dev.py  worker.py
docs/: architecture-decisions.md  architecture-design-20260404.md  architecture-design-20260406.md  candidate-dedup-design.md  candidate-discovery-redesign.md  development-plan-detailed.md  development-spec-20260402.md  development-spec-20260404.md  development-spec-20260406.md  embedding-enhancements-design.md  ontology-quality-framework.md  pattern-externalization-design.md  product-architecture-4plus1-20260413.md  query-engine-design-20260417.md  stats-monitoring-design.md  system-introduction.html  telecom-ontology-design.md  telecom-semantic-kb-system-design.md  unified-extraction-scheme-20260426.md
ontology/domains/: cloud_core_network.yaml  cloud_core_network_conditions.yaml  cloud_core_network_mechanisms.yaml  cloud_core_network_methods.yaml  cloud_core_network_scenarios.yaml  ip_network.yaml  ip_network_conditions.yaml  ip_network_evolved.yaml  ip_network_mechanisms.yaml  ip_network_methods.yaml  ip_network_scenarios.yaml
scripts/: clean_candidates.py  export_dashboard.py  init_crawler_postgres.sql  init_neo4j.py  init_postgres.sql  load_ontology.py  migrate_normalized_forms.py  neo4j_demo_queries.cypher  neo4j_queries.cypher  reset_and_run.py  restore_minio.py  test_pipeline.py  test_stage1.py  test_stage2.py
semcore/: pyproject.toml
semcore/semcore/: app.py
src/: app.py  app_factory.py
static/: dashboard.html
(+82 files in other folders)
