[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semcore"
version = "0.1.0"
description = "Governance-first semantic knowledge infrastructure framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []   # framework core has zero external dependencies

[project.optional-dependencies]
telecom = [
    "psycopg2-binary>=2.9",
    "neo4j>=5.0",
    "anthropic>=0.40",
    "sentence-transformers>=3.0",
    "fastapi>=0.110",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "mypy>=1.9",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["semcore*"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"